fix: update a comment

--- a/src/scss/components/_filter.scss
+++ b/src/scss/components/_filter.scss
@@ -150,7 +150,7 @@
 }
 
 // Custom styles when "enhance inputs" is enabled
-// Box
+// Custom checkbox
 .fl-input-enhanced .filter-checkbox + label::before {
 	outline: rem(3) double $blue-alt-light;
 }
