feat: add filter to "Views" landing page (resolves #174) (#318)
* fix: code clean up

* feat: the filter styling is done. need to implement the functionality

* fix: adjust checkbox color with UIO themes and a fix on the search style

* fix: style filter buttons with UIO themes

* fix: include both "slug" and "name" elements in post tags

* feat: add filter by tags function and adjust the filter style

* feat: working on the Vue templated filter on the "Views" landing page

* feat: add binding for checkboxes on the vue template and handle reset

* feat: add css for displaying search and filter results

* feat: implement more styling and add code comments

* fix: improve the focus/hover style for the expand button

* fix: decrease svg stroke width for the focus/hover on the expand button

* fix: use double lined borders for filter checkboxes with enhance inputs

* fix: implement the filter UI changes

* fix: fix href query strings when moving between pages for filter results

* fix: update a comment

--- a/src/scss/components/_post-article.scss
+++ b/src/scss/components/_post-article.scss
@@ -22,23 +22,8 @@
 	}
 
 	.tags {
-		display: flex;
-		flex-wrap: wrap;
+		@include tags();
+
 		margin-bottom: rem(80);
-
-		a {
-			background-color: $gold-light;
-			border-radius: rem(20);
-			box-shadow: 0 0 0 rem(1) transparent inset;
-			color: $blue-alt;
-			font-weight: $font-weight-bold;
-			margin: rem(8) rem(16) rem(8) 0;
-			padding: rem(5) rem(16);
-
-			&:focus,
-			&:hover {
-				box-shadow: 0 0 0 rem(1) $blue-alt inset;
-			}
-		}
 	}
 }
