--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -25,35 +25,143 @@
 	}
 }
 
+// Maintain aspect ration of a container
+@mixin tags() {
+	display: flex;
+	flex-wrap: wrap;
+
+	a {
+		background-color: $gold-light;
+		border-radius: rem(20);
+		box-shadow: 0 0 0 rem(1) transparent inset;
+		color: $blue-alt;
+		font-weight: $font-weight-bold;
+		margin: rem(8) rem(16) rem(8) 0;
+		padding: rem(5) rem(16);
+
+		&:focus,
+		&:hover {
+			box-shadow: 0 0 0 rem(1) $blue-alt inset;
+		}
+	}
+}
+
 // To adapt to UIO contrast themes
 @mixin adapt-to-uioThemes($fColor, $bColor) {
+	// Customized colors
+	--currentColor: currentColor;
+	--bColor: #{$bColor};
+	--fColor: #{$fColor};
+
 	// WeCount logo
 	.logo circle,
 	.logo path {
 		fill: none;
-		stroke: var(--logo-stroke, currentColor);
+		stroke: var(--fColor, currentColor);
 		stroke-linecap: round;
 		stroke-width: rem(3);
 	}
-
-	--logo-stroke: #{$fColor};
-
-	// Canada logo
-	--theme-link-fill: currentColor;
 
 	// Placeholder images on the "views" page
 	svg.placeholder-img use {
-		stroke: var(--placeholder-stroke, currentColor);
+		stroke: var(--fColor, currentColor);
 		stroke-linecap: round;
 		stroke-width: rem(3);
 	}
 
-	--theme-background-fill: #{$bColor};
-	--placeholder-stroke: #{$fColor};
+	// Filter
+	.filter {
+		.filter-checkbox {
+			// Box
+			& + label::before {
+				outline: rem(1) solid $fColor;
+			}
 
-	// Styles for Tags
-	.post-article .tags a {
-		box-shadow: 0 0 0 rem(1) currentColor inset;
+			// Checkmark
+			&:checked + label::after {
+				background: $fColor;
+				box-shadow:
+					rem(2) 0 0 $bColor,
+					rem(4) 0 0 $bColor,
+					rem(4) rem(-2) 0 $bColor,
+					rem(4) rem(-4) 0 $bColor,
+					rem(4) rem(-6) 0 $bColor,
+					rem(4) rem(-8) 0 $bColor;
+			}
+		}
+
+		// "Expand filter" button
+		.filter-expand-button {
+			--expand-button-color: #{$bColor};
+			--expand-button-stroke-color: #{$fColor};
+
+			background-color: #{$bColor} !important;
+
+			svg {
+				background-color: #{$bColor} !important;
+			}
+
+			&:focus,
+			&:hover {
+				--expand-button-color: #{$fColor};
+				--expand-button-stroke-color: #{$bColor};
+			}
+		}
+
+		// Apply and reset buttons
+		.filter-buttons {
+			background-color: $grey-lighter;
+		}
+	}
+
+	// Custom styles when "enhance inputs" is enabled
+	&.fl-input-enhanced .filter-checkbox + label::before {
+		outline: rem(3) double $fColor;
+	}
+
+	// Box checked
+	.filter .filter-checkbox:checked + label::before {
+		background: $fColor;
+	}
+
+	// Box focus
+	.filter .filter-checkbox:focus + label::before,
+	.filter .filter-checkbox:hover + label::before {
+		outline: rem(2.5) solid $fColor;
+	}
+
+	// Box focus when "enhance inputs" is enabled
+	&.fl-input-enhanced .filter-checkbox:focus + label::before,
+	&.fl-input-enhanced .filter-checkbox:hover + label::before {
+		border: rem(2.5) solid $fColor;
+		outline: rem(3.5) double $fColor;
+	}
+
+	// Box checked and focus/hover
+	.filter .filter-checkbox:checked:focus + label::before,
+	.filter .filter-checkbox:checked:hover + label::before {
+		outline: rem(3) double $fColor;
+	}
+
+	// Box checked and focus/hover when "enhance inputs" is enabled
+	&.fl-input-enhanced .filter-checkbox:checked:focus + label::before,
+	&.fl-input-enhanced .filter-checkbox:checked:hover + label::before {
+		border: rem(1) solid $bColor;
+		box-shadow: 0 0 0 rem(1) $fColor inset;
+		outline: rem(3) double $fColor;
+	}
+
+	// Tags
+	.tags {
+		a,
+		p {
+			box-shadow: 0 0 0 rem(1) currentColor inset;
+		}
+
+		a:focus,
+		a:hover {
+			box-shadow: 0 0 0 rem(2) currentColor inset;
+		}
 	}
 
 	// Focus/hover styles for SVGs on the footer
@@ -108,11 +216,9 @@
 	#defaultContainer a:hover,
 	#defaultContainer header .site-nav-wrapper .site-nav nav a:focus,
 	#defaultContainer header .site-nav-wrapper .site-nav nav a:hover,
-	#defaultContainer .content-wrapper .tags-info .tags a:focus,
-	#defaultContainer .content-wrapper .tags-info .tags a:hover,
 	.search-container input,
-	button:focus,
-	button:hover,
+	button:not(.filter-expand-button):focus,
+	button:not(.filter-expand-button):hover,
 	li .pagination-link,
 	li .pagination-link::before,
 	.wp-block-file__button:focus,
