fix: added video content dimensions for different screen sizes

--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -44,44 +44,54 @@ article {
 		}
 	}
 
-	// WP selector's customized styles for the WeCount website
+	// WP customized styles for the WeCount website
 	figure {
 		display: table;
 		margin-left: auto;
 		margin-right: auto;
 	}
-
-	.alignleft {
-		float: left;
-		margin-right: rem(25);
-		margin-top: 0;
+	// The folowing CSS rule ensures video content is the width of the article element in mobile and iPad views
+	.wp-block-video,
+	.is-type-video {
+		min-width: 100%;
 	}
 
-	.alignright {
-		float: right;
-		margin-left: rem(25);
-		margin-top: 0;
+	.wp-block-group {
+		margin-top: rem(12);
 	}
 
+	// The folowing CSS rule ensures content fits within the viewport for mobile and iPad views
 	.wp-block-image,
 	.wp-block-audio,
-	.wp-block-embed {
+	.wp-block-embed,
+	.wp-block-media-text,
+	.wp-block-group {
 		img {
 			height: 100%;
 			max-width: 100%;
 		}
 
-		figcaption {
-			caption-side: bottom;
-			display: table-caption;
-			font-size: rem(14);
-			font-style: italic;
-			padding: 1rem 0;
-			text-align: center;
+		audio {
+			max-width: 100%;
 		}
+	}
+
+	figcaption {
+		caption-side: bottom;
+		display: table-caption;
+		font-size: rem(14);
+		font-style: italic;
+		padding: 1rem 0;
+		text-align: center;
 	}
 }
 
+// The folowing CSS rule ensures that video content fits within the viewport for mobile and iPad views
+.wp-block-embed__wrapper iframe,
+video {
+	height: 100%;
+	width: 100%;
+}
 // Hide an element visually without hiding it from screen readers
 // Reference: https://tailwindcss.com/docs/screen-readers/#app
 .screen-reader-only {
@@ -114,6 +124,86 @@ article {
 		article {
 			padding: rem(1) rem(60);
 			padding-bottom: rem(62);
+
+			// WP customized styles for the WeCount website in Desktop and iPad Pro views
+			.wp-block-video,
+			.is-type-video {
+				min-width: auto;
+			}
+
+			.alignleft {
+				float: left;
+				margin-right: rem(25);
+				margin-top: 0;
+			}
+
+			.alignright {
+				float: right;
+				margin-left: rem(25);
+				margin-top: 0;
+			}
+
+			// Styling for media and text block with media on the left
+			.wp-block-media-text {
+				display: grid;
+
+				.wp-block-media-text__content {
+					margin-left: rem(25);
+				}
+
+				img {
+					width: 100%;
+				}
+			}
+
+			// Styling for media and text block with media on the right
+			.has-media-on-the-right {
+				.wp-block-media-text__media {
+					grid-column: 2;
+					grid-row: 1;
+				}
+
+				.wp-block-media-text__content {
+					grid-column: 1;
+					grid-row: 1;
+					margin-left: 0;
+					margin-right: rem(25);
+				}
+			}
+
+			.wp-block-group {
+				display: grid;
+
+				p {
+					margin: 0 auto;
+				}
+			}
+
+			.is-type-video .wp-block-embed__wrapper iframe,
+			.wp-block-video video {
+				height: rem(326);
+				width: rem(580);
+			}
+
+			.alignleft,
+			.alignright {
+				.wp-block-embed__wrapper iframe {
+					height: 100%;
+					width: 100%;
+				}
+			}
+		}
+	}
+}
+
+@media screen and (min-width: rem(1366)) {
+	main article {
+		.alignleft,
+		.alignright {
+			.wp-block-embed__wrapper iframe {
+				height: rem(326);
+				width: rem(580);
+			}
 		}
 	}
 }
