fix: provide proper names for expand buttons on the "Views" landing page

--- a/src/views.njk
+++ b/src/views.njk
@@ -67,9 +67,9 @@ pagination:
       <div class="filter">
       	<div class="filter-header">
       		<h2>Tags Filters</h2>
-      		<button type="button" class="filter-expand-button" aria-expanded="true">
-      			<svg class="arrowdown"><use xlink:href="#arrowdown" /></svg>
-      			<svg class="arrowup"><use xlink:href="#arrowup" /></svg>
+      		<button type="button" class="filter-expand-button" aria-expanded="true" aria-label="collapse">
+      			<svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
+      			<svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
       		</button>
       	</div>
 
