fix: additional changes to appearance of website

--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -37,9 +37,9 @@
 
 		h2 {
 			color: $navy-light;
-			font-weight: $font-weight-medium;
-			line-height: rem(35);
-			margin: rem(9) rem(16);
+			font-size: rem(18);
+			line-height: rem(22);
+			margin: rem(15) rem(19);
 		}
 
 		.green-title {
