--- a/src/page.njk
+++ b/src/page.njk
@@ -22,13 +22,13 @@ permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug  }}/"
     </article>
     <div class="homepage-cards">
 			<a href="/views/" class="blue card">
-				<h2 class="h3">Read current views in inclusive data science</h2>
+				<h2>Read current views in inclusive data science</h2>
 			</a>
 			<a href="/tools/" class="green card" hidden>
-				<h2 class="h3">Find inclusive data tools</h2>
+				<h2>Find inclusive data tools</h2>
 			</a>
 			<a href="/inclusion-challenges/" class="yellow card">
-				<h2 class="h3">Participate in our inclusion challenge workshops</h2>
+				<h2>Participate in our inclusion challenge workshops</h2>
 			</a>
 		</div>
 </div>
