fix: add hewlett foundation as funder

--- a/src/_includes/components/funders.njk
+++ b/src/_includes/components/funders.njk
@@ -2,9 +2,19 @@
 	<symbol id="canada-logo" viewBox="0 0 143.11 34.11">
 		{% include 'svg/canada.svg' %}
 	</symbol>
+	<symbol id="hewlett-logo" viewBox="0 0 143.11 34.11">
+		{% include 'svg/hewlett-foundation.svg' %}
+	</symbol>
 </svg>
 
 <div class="funders">
+	<p>Funded by a grant from The William and Flora Hewlett Foundation.</p>
+  <div>
+    <a href="https://hewlett.org/">
+      <svg><use xlink:href="#hewlett-logo" /></svg>
+      <span class="screen-reader-only">Funded by a grant from The William and Flora Hewlett Foundation.</span>
+    </a>
+  </div>
   <p>Supported by Innovation, Science and Economic Development Canada’s Accessible Technology Program.</p>
   <div>
     <a href="https://www.ic.gc.ca/eic/site/118.nsf/eng/home">
