fix: add link to  hewlett foundation site to funders statement

--- a/src/_includes/components/funders.njk
+++ b/src/_includes/components/funders.njk
@@ -8,7 +8,7 @@
 </svg>
 
 <div class="funders">
-	<p>Funded by a grant from The William and Flora Hewlett Foundation.</p>
+	<p>Funded by a grant from <a href="https://hewlett.org/">The William and Flora Hewlett Foundation.</a></p>
   <div>
     <a href="https://hewlett.org/">
       <svg><use xlink:href="#hewlett-logo" /></svg>
