Add the William and Flora Hewlett Foundation as a funder (resolves #340) (#341)
* fix: applied inline flex to tag fiter label span

* fix: add hewlett foundation as funder

* fix: add link to  hewlett foundation site to funders statement

* fix: removed svg wrapper from hewlett logo file

* fix: improve the hewlett funder section

Co-authored-by: Cindy Qi Li <cli@ocadu.ca>

--- a/src/_includes/components/funders.njk
+++ b/src/_includes/components/funders.njk
@@ -2,12 +2,22 @@
 	<symbol id="canada-logo" viewBox="0 0 143.11 34.11">
 		{% include 'svg/canada.svg' %}
 	</symbol>
+	<symbol id="hewlett-logo" viewBox="0 0 599.91 127.9">
+		{% include 'svg/hewlett-foundation.svg' %}
+	</symbol>
 </svg>
 
 <div class="funders">
+	<p>Funded by a grant from <a class="hewlett-href" href="https://hewlett.org/">The William and Flora Hewlett Foundation</a>.</p>
+  <div>
+    <a class="funder-logo" href="https://hewlett.org/">
+      <svg><use xlink:href="#hewlett-logo" /></svg>
+      <span class="screen-reader-only">Funded by a grant from The William and Flora Hewlett Foundation.</span>
+    </a>
+  </div>
   <p>Supported by Innovation, Science and Economic Development Canada’s Accessible Technology Program.</p>
   <div>
-    <a href="https://www.ic.gc.ca/eic/site/118.nsf/eng/home">
+    <a class="funder-logo" href="https://www.ic.gc.ca/eic/site/118.nsf/eng/home">
       <svg><use xlink:href="#canada-logo" /></svg>
       <span class="screen-reader-only">Accessible Technology Program</span>
     </a>
