--- a/src/scss/components/_search-container.scss
+++ b/src/scss/components/_search-container.scss
@@ -15,6 +15,7 @@
 	input[type="search"] {
 		border: 0;
 		border-radius: 50%;
+		font-size: rem(14);
 		outline: none;
 		padding: rem(8) rem(16);
 		width: rem(16);
@@ -36,7 +37,7 @@
 		input[type="search"],
 		input[type="search"]:focus {
 			border-radius: rem(28);
-			font-size: inherit;
+			font-size: rem(18);
 			padding: rem(16) rem(56);
 			width: rem(240);
 		}
