fix: increase size of funder logos

--- a/src/_includes/components/funders.njk
+++ b/src/_includes/components/funders.njk
@@ -8,7 +8,7 @@
 </svg>
 
 <div class="funders">
-	<p>Funded by a grant from <a class="hewlett-href" href="https://hewlett.org/">The William and Flora Hewlett Foundation</a>.</p>
+	<p>Funded by a grant from The William and Flora Hewlett Foundation.</p>
   <div>
     <a class="funder-logo" href="https://hewlett.org/">
       <svg><use xlink:href="#hewlett-logo" /></svg>
