--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -50,18 +50,14 @@ footer {
 				padding-bottom: rem(2);
 			}
 
-			.hewlett-href {
-				font-weight: $font-weight-normal;
-			}
-
 			.funder-logo {
 				display: inline-block;
 			}
 
 			svg {
-				height: rem(60);
-				padding: rem(13) rem(13) rem(13) 0;
-				width: rem(144);
+				height: rem(80);
+				padding: rem(13) rem(13) 0 0;
+				width: rem(288);
 			}
 		}
 
