--- a/src/_includes/components/funders.njk
+++ b/src/_includes/components/funders.njk
@@ -11,7 +11,7 @@
 	<p>Funded by a grant from The William and Flora Hewlett Foundation.</p>
   <div>
     <a class="funder-logo" href="https://hewlett.org/">
-      <svg><use xlink:href="#hewlett-logo" /></svg>
+      <svg class="hewlett-logo"><use xlink:href="#hewlett-logo" /></svg>
       <span class="screen-reader-only">Funded by a grant from The William and Flora Hewlett Foundation.</span>
     </a>
   </div>
