--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -55,6 +55,12 @@ footer {
 			}
 
 			svg {
+				height: rem(60);
+				padding: rem(13) rem(13) rem(13) 0;
+				width: rem(144);
+			}
+
+			.hewlett-logo {
 				height: rem(80);
 				padding: rem(13) rem(13) 0 0;
 				width: rem(288);
