fix: change variable name of link colour on yellow backgrounds

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -34,7 +34,7 @@
 		background-color: $gold-light;
 		border-radius: rem(20);
 		box-shadow: 0 0 0 rem(1) transparent inset;
-		color: $blue-on-yellow;
+		color: $blue-alt-dark;
 		font-weight: $font-weight-bold;
 		margin: rem(8) rem(16) rem(8) 0;
 		padding: rem(5) rem(16);
