fix: used font weight variable for h2 footer font weight

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -39,8 +39,8 @@ footer {
 
 		h2 {
 			color: $white;
-			font-size: rem(18);
-			font-weight: bold;
+			font-size: rem(16);
+			font-weight: $font-weight-bold;
 		}
 
 		.funders {
