fix: add a class for the canada logo

--- a/src/_includes/components/funders.njk
+++ b/src/_includes/components/funders.njk
@@ -18,7 +18,7 @@
   <p>Supported by Innovation, Science and Economic Development Canada’s Accessible Technology Program.</p>
   <div>
     <a class="funder-logo" href="https://www.ic.gc.ca/eic/site/118.nsf/eng/home">
-      <svg><use xlink:href="#canada-logo" /></svg>
+      <svg class="canada-logo"><use xlink:href="#canada-logo" /></svg>
       <span class="screen-reader-only">Accessible Technology Program</span>
     </a>
   </div>
