--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -54,7 +54,7 @@ footer {
 				display: inline-block;
 			}
 
-			svg {
+			.canada-logo {
 				height: rem(60);
 				padding: rem(13) rem(13) rem(13) 0;
 				width: rem(144);
