Increase size of funder logos (resolves #342) (#344)
* fix: applied inline flex to tag fiter label span

* fix: increase size of funder logos

* fix: only increase hewlett logo size

* fix: add a class for the canada logo

--- a/src/_includes/components/funders.njk
+++ b/src/_includes/components/funders.njk
@@ -8,17 +8,17 @@
 </svg>
 
 <div class="funders">
-	<p>Funded by a grant from <a class="hewlett-href" href="https://hewlett.org/">The William and Flora Hewlett Foundation</a>.</p>
+	<p>Funded by a grant from The William and Flora Hewlett Foundation.</p>
   <div>
     <a class="funder-logo" href="https://hewlett.org/">
-      <svg><use xlink:href="#hewlett-logo" /></svg>
+      <svg class="hewlett-logo"><use xlink:href="#hewlett-logo" /></svg>
       <span class="screen-reader-only">Funded by a grant from The William and Flora Hewlett Foundation.</span>
     </a>
   </div>
   <p>Supported by Innovation, Science and Economic Development Canada’s Accessible Technology Program.</p>
   <div>
     <a class="funder-logo" href="https://www.ic.gc.ca/eic/site/118.nsf/eng/home">
-      <svg><use xlink:href="#canada-logo" /></svg>
+      <svg class="canada-logo"><use xlink:href="#canada-logo" /></svg>
       <span class="screen-reader-only">Accessible Technology Program</span>
     </a>
   </div>
