fix: enhance inputs font size from 125 percent to 95 percent in uio button for mobile screens(resolves #336) (#337)
* fix: enhance inputs font size from 125 percent to 105 percent

* fix: applied inline flex to tag fiter label span

* fix: centered uio tab when not expanded

* fix: replace button with fl-prefsEditor-showHide

* fix: replace button with fl-prefsEditor-showHide in rest of vendors scss

* fix: size of hewlett logo in mobile view

* fix: remove duplicate line of hewlett logo selector in footer

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -61,9 +61,10 @@ footer {
 			}
 
 			.hewlett-logo {
-				height: rem(80);
+				height: rem(64);
+				margin-bottom: rem(16);
 				padding: rem(13) rem(13) 0 0;
-				width: rem(288);
+				width: rem(232);
 			}
 		}
 
@@ -215,6 +216,11 @@ footer {
 
 				svg {
 					margin-bottom: rem(16);
+				}
+
+				.hewlett-logo {
+					height: rem(80);
+					width: rem(288);
 				}
 			}
 
