fix: improve visual appearance of the website (resolves #322) (#334)
* fix: changed font size of heading and side menu

* fix: adjusted padding and margin for header nav

* fix: visual appearnce of website

* fix: applied inline flex to tag fiter label span

* fix: additional changes to appearance of website

* fix: increase width of aside

* fix: allow views filter h2 to inherit font size from base scss

* fix: change font size of post preview and toc to match body text

* fix: apply font size to content wrapper selector instead of p selector

* fix: revisited every font-size definition

* fix: used font weight variable for h2 footer font weight

* fix: removed this line because it is covere in PR 337

* fix: move font size of uio tab to different media selector

--- a/src/scss/components/_aside.scss
+++ b/src/scss/components/_aside.scss
@@ -22,19 +22,19 @@ aside {
 				li {
 					left: rem(-2);
 					margin: 0 0 rem(23) 0;
-					padding-left: rem(23);
-					width: rem(151);
+					padding-left: rem(20);
+					width: rem(158);
 					word-wrap: break-word;
 
-					&:active {
+					&.active {
 						box-shadow: rem(5) 0 0 0 $green-dark inset;
-						padding-left: rem(25);
+						padding-left: rem(22);
 						position: relative;
 					}
 
 					a {
 						color: $navy-light;
-						font-size: rem(24) !important; // Enactors.css in infusion uses !important on this element
+						font-size: rem(18) !important; // Enactors.css in infusion uses !important on this element
 						font-weight: $font-weight-normal;
 					}
 
@@ -44,17 +44,7 @@ aside {
 						}
 					}
 				}
-
-				li.active {
-					box-shadow: rem(5) 0 0 0 $green-dark inset;
-					padding-left: rem(25);
-					position: relative;
-				}
 			}
 		}
-	}
-
-	.fl-input-enhanced #defaultContainer aside nav ul li:first-child a {
-		font-size: rem(30) !important; // Enactors.css in infusion uses !important on this element
 	}
 }
