--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -9,24 +9,25 @@
 
 h1 {
 	color: $grey-dark;
-	font-size: rem(48);
+	font-size: rem(35);
 	font-weight: $font-weight-semibold;
 }
 
 h2 {
 	color: $grey-dark;
-	font-size: rem(48);
+	font-size: rem(24);
 	font-weight: $font-weight-medium;
 }
 
 h3,
 .h3 {
-	font-size: rem(24);
+	font-size: rem(18);
 	font-weight: $font-weight-bold;
 }
 
-p {
+h4 {
 	font-size: rem(16);
+	font-weight: $font-weight-bold;
 }
 
 // Links and Buttons.
@@ -107,7 +108,6 @@ button::before:not(.fl-prefsEditor-buttons) button {
 
 	.wp-block-file__button {
 		display: block;
-		font-size: rem(14);
 		font-weight: $font-weight-medium;
 		height: auto;
 	}
@@ -115,7 +115,20 @@ button::before:not(.fl-prefsEditor-buttons) button {
 
 @media screen and (min-width: rem(1024)) {
 	h1 {
-		font-size: rem(64);
+		font-size: rem(50);
+	}
+
+	h2 {
+		font-size: rem(35);
+	}
+
+	h3,
+	.h3 {
+		font-size: rem(24);
+	}
+
+	h4 {
+		font-size: rem(18);
 	}
 
 	.wp-block-file {
