--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -19,6 +19,7 @@ body {
 
 .content-wrapper {
 	flex: 1;
+	font-size: rem(14);
 }
 
 main {
@@ -47,19 +48,15 @@ article {
 	// WP customized styles for the WeCount website
 
 	.has-small-font-size {
-		font-size: rem(13.48);
-	}
-
-	.has-normal-font-size {
-		font-size: rem(16);
+		font-size: 84%;
 	}
 
 	.has-large-font-size {
-		font-size: rem(20.21);
+		font-size: 126%;
 	}
 
 	.has-larger-font-size {
-		font-size: rem(26.95);
+		font-size: 168%;
 	}
 
 	// WP styles for vertically aligning text within Media & Text blocks
@@ -158,6 +155,7 @@ article {
 
 	.content-wrapper {
 		display: grid;
+		font-size: rem(18);
 		grid-template-columns: 1fr minmax(75ch, 130ch) 1fr;
 		grid-template-rows: auto auto;
 	}
