fix: improve the text for "search filters" on the views landing page

--- a/src/_includes/components/filter.njk
+++ b/src/_includes/components/filter.njk
@@ -1,6 +1,6 @@
 <div class="filter">
 	<div class="filter-header">
-		<h2>{{ filterTitle}}</h2>
+		<h2 class="h3">{{ filterTitle}}</h2>
 		<button type="button" class="filter-expand-button" aria-expanded="false" aria-label="expand">
 			<svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
 			<svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
