--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -50,8 +50,12 @@ footer {
 				padding-bottom: rem(2);
 			}
 
-			.funder-logo {
-				display: inline-block;
+			div {
+				text-align: center;
+
+				.funder-logo {
+					display: inline-block;
+				}
 			}
 
 			.canada-logo {
@@ -213,6 +217,10 @@ footer {
 				align-self: end;
 				grid-column: 2/3;
 				grid-row: 2/3;
+
+				div {
+					text-align: start;
+				}
 
 				svg {
 					margin-bottom: rem(16);
