feat(context): this is better

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -126,6 +126,6 @@ button::before:not(.fl-prefsEditor-buttons) button {
 	}
 }
 
-.primary-nav a {
-	border-radius: 20px;
+#journeys-through-the-digital-innovation-appendix-of-the-master-innovation-and-development-plan {
+	font-size: 1.7rem;
 }
