--- a/src/_includes/components/header-nav.njk
+++ b/src/_includes/components/header-nav.njk
@@ -20,7 +20,7 @@
 <div class="nav-smallScreen">
 	<nav class="starter-nav">
 		<button id="menuToggleButton" aria-expanded="false">
-		  <svg><use xlink:href="#menu-icon" /></svg>&nbsp;
+		  <svg><use xlink:href="#menu-icon" /></svg>&nbsp;<span>Menu</span>
 		</button>
 		<form method="get" action="/search/">
 			{% include 'components/search-container.njk' %}
