fix: add hanging indent for label texts in the search filter

--- a/src/scss/components/_filter.scss
+++ b/src/scss/components/_filter.scss
@@ -108,6 +108,13 @@
 
 		li {
 			padding: rem(4) rem(8);
+
+			// Hanging indent for label texts
+			label {
+				display: block;
+				padding-left: rem(29);
+				text-indent: rem(-30);
+			}
 		}
 	}
 
