Fix: Galaxy fold search bar (resolves #355) (#358)
* fix: applied inline flex to tag fiter label span

* fix: remove menu in header nav on galaxy fold screen

* fix: wrap span around menu text in mobile header

* fix: add screen reader only span

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -82,6 +82,10 @@ header {
 						background-color: $orange-focus;
 						color: $navy-light;
 					}
+
+					#menuToggleButton .screen-reader-only {
+						display: none;
+					}
 				}
 			}
 
@@ -174,6 +178,19 @@ header {
 					}
 				}
 			}
+		}
+	}
+}
+
+// This media query breakpoint comes the width of the Galaxy Fold screen.
+@media screen and (max-width: rem(280)) {
+	header .site-nav-wrapper .site-nav .nav-smallScreen .starter-nav #menuToggleButton {
+		span {
+			display: none;
+		}
+
+		.screen-reader-only {
+			display: inline;
 		}
 	}
 }
